"Refactor HTML: Remove unnecessary ids and data attributes."
In this commit, unnecessary ids and namespaced data-w-id attributes were removed from several elements across public/creating-account.html, public/sign-up.html, and public/allocate.html files. These ids and data attributes were most likely used for JavaScript functionality or styling that is now obsolete. This would decrease the overall file size, improve readability and maintainability of the code.

--- a/public/dev-module.html
+++ b/public/dev-module.html
@@ -152,14 +152,14 @@ input[type=number] {
                         <div class="swap_drop_col--wrap w-row">
                           <div class="swap_drop--col w-col w-col-5">
                             <div class="swap_drop_label--text">ISP</div>
-                            <div id="w-node-_661b5959-017e-76e7-a1f3-490ae12d54a7-0e2d46e6" class="w-layout-grid swap_drop_grid_item--wrap">
-                              <div swap_isp_btn="att" id="w-node-_661b5959-017e-76e7-a1f3-490ae12d54a8-0e2d46e6" class="swap_drop_grid--item active">
+                            <div class="w-layout-grid swap_drop_grid_item--wrap">
+                              <div swap_isp_btn="att" class="swap_drop_grid--item active">
                                 <div swap_isp="att" class="swap_drop_grid_item--text">AT&amp;T</div>
                               </div>
-                              <div swap_isp_btn="verizon" id="w-node-_661b5959-017e-76e7-a1f3-490ae12d54ab-0e2d46e6" class="swap_drop_grid--item">
+                              <div swap_isp_btn="verizon" class="swap_drop_grid--item">
                                 <div swap_isp="verizon" class="swap_drop_grid_item--text">Verizon</div>
                               </div>
-                              <div swap_isp_btn="tmobile" id="w-node-_661b5959-017e-76e7-a1f3-490ae12d54ae-0e2d46e6" class="swap_drop_grid--item">
+                              <div swap_isp_btn="tmobile" class="swap_drop_grid--item">
                                 <div swap_isp="tmobile" class="swap_drop_grid_item--text">T-Mobile</div>
                               </div>
                             </div>
@@ -167,19 +167,19 @@ input[type=number] {
                           <div class="swap_drop--col right w-col w-col-7">
                             <div class="swap_drop_label--text">LOCATION</div>
                             <div swap="locations" class="w-layout-grid swap_drop_grid_item--wrap location">
-                              <div swap_loc_btn="Austin" id="w-node-_5b82f5f4-3b6f-34eb-02db-d1a773e6f372-0e2d46e6" class="swap_drop_grid--item">
+                              <div swap_loc_btn="Austin" class="swap_drop_grid--item">
                                 <div swap_loc="Austin" class="swap_drop_grid_item--text">Austin TX</div>
                                 <div swap_loc_stock="Austin" class="swap_drop_loc_stock--text">15</div>
                               </div>
-                              <div swap_loc_btn="Cleveland" id="w-node-_5b82f5f4-3b6f-34eb-02db-d1a773e6f375-0e2d46e6" class="swap_drop_grid--item">
+                              <div swap_loc_btn="Cleveland" class="swap_drop_grid--item">
                                 <div swap_loc="Cleveland" class="swap_drop_grid_item--text">Cleveland OH</div>
                                 <div swap_loc_stock="Cleveland" class="swap_drop_loc_stock--text">22</div>
                               </div>
-                              <div swap_loc_btn="Los Angeles" id="w-node-_5b82f5f4-3b6f-34eb-02db-d1a773e6f378-0e2d46e6" class="swap_drop_grid--item">
+                              <div swap_loc_btn="Los Angeles" class="swap_drop_grid--item">
                                 <div swap_loc="Los Angeles" class="swap_drop_grid_item--text">Los Angeles CA</div>
                                 <div swap_loc_stock="Los Angeles" class="swap_drop_loc_stock--text">2</div>
                               </div>
-                              <div swap_loc_btn="New York" id="w-node-c70e49db-5f75-3e8a-a0ed-7996b88a76a4-0e2d46e6" class="swap_drop_grid--item">
+                              <div swap_loc_btn="New York" class="swap_drop_grid--item">
                                 <div swap_loc="New York" class="swap_drop_grid_item--text">New York NY</div>
                                 <div swap_loc_stock="New York" class="swap_drop_loc_stock--text">2</div>
                               </div>
@@ -194,7 +194,7 @@ input[type=number] {
                               <div class="info--wrap">
                                 <div class="info_grid--wrap">
                                   <div class="w-layout-grid info_grid--item-explain one noborder">
-                                    <div checkout_info_explain="irreversible" id="w-node-ec424936-437d-4cea-b5df-b72f50054e30-0e2d46e6" class="info_item--text explain">This action is irreversible. Changes occur in realtime.</div>
+                                    <div checkout_info_explain="irreversible" class="info_item--text explain">This action is irreversible. Changes occur in realtime.</div>
                                   </div>
                                 </div>
                               </div>
@@ -218,7 +218,7 @@ input[type=number] {
           <div class="info--wrap">
             <div class="info_grid--wrap">
               <div class="w-layout-grid info_grid--item-explain one noborder">
-                <div checkout_info_explain="irreversible" id="w-node-a1d1a7a8-95a3-1897-494b-8ae570a9aca7-0e2d46e6" class="info_item--text explain">This action is irreversible. Changes occur in realtime.</div>
+                <div checkout_info_explain="irreversible" class="info_item--text explain">This action is irreversible. Changes occur in realtime.</div>
               </div>
             </div>
           </div>
@@ -238,7 +238,7 @@ input[type=number] {
           <div class="mod_btn_wrp w-clearfix">
             <div mod_btn="cancel" class="actions_btn w-clearfix">
               <div id="modCancBtnIco" class="btn_icon cancel">
-                <div id="modCancBtnLdr" class="lottie_btn_ldr" data-w-id="a1d1a7a8-95a3-1897-494b-8ae570a9acb3" data-animation-type="lottie" data-src="documents/chipped-circle-loader-v3.json" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="1" data-duration="0.65"></div>
+                <div id="modCancBtnLdr" class="lottie_btn_ldr" data-animation-type="lottie" data-src="documents/chipped-circle-loader-v3.json" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="1" data-duration="0.65"></div>
               </div>
               <div class="action_btn_text">Cancel</div>
             </div>
@@ -820,10 +820,10 @@ $item-height: 220px;
                   <div crd_expires_tip="VR-US-LA2-1004" class="info--wrap prx_crd_expires">
                     <div class="info_grid--wrap">
                       <div crd_expires_info="VR-US-LA2-1004" class="w-layout-grid info_grid--item one">
-                        <div id="w-node-_727e0b78-1878-f15c-7103-391cf710b370-0e2d46e6" class="info_item--text">10:53:23 PM PST</div>
+                        <div class="info_item--text">10:53:23 PM PST</div>
                       </div>
                       <div crd_expires_explain="VR-US-LA2-1004" class="w-layout-grid info_grid--item-explain one">
-                        <div id="w-node-a1473584-c0e2-c0dd-976a-8e8f0191613f-0e2d46e6" class="info_item--text explain">The time at which this proxy expires in Standard Time.</div>
+                        <div class="info_item--text explain">The time at which this proxy expires in Standard Time.</div>
                       </div>
                     </div>
                   </div>
@@ -869,46 +869,46 @@ $item-height: 220px;
             <div quick_menu="VR-US-LA2-1004" class="prx_crd_qm">
               <div class="qm_grids">
                 <div class="w-layout-grid qm_grid_item two">
-                  <div id="w-node-d36633e2-4c54-4bc2-308c-7fbf84bb3503-0e2d46e6" class="qm_item w-clearfix">
+                  <div class="qm_item w-clearfix">
                     <div class="qm_item_ico renew"></div>
-                    <div id="w-node-b84d92f2-e334-e10c-9b47-807d5aed8cad-0e2d46e6" class="qm_item_txt">Auto Renew</div>
+                    <div class="qm_item_txt">Auto Renew</div>
                   </div>
-                  <div quick_menu_item="VR-US-LA2-1004" id="w-node-a8d3be52-5946-eb51-b79f-4ca3acea47e0-0e2d46e6" class="qm_item right">
+                  <div quick_menu_item="VR-US-LA2-1004" class="qm_item right">
                     <div quick_menu_renew_tog="true" quick_menu_renew_item="VR-US-LA2-1004" class="qm_tog_btn">
                       <div class="qm_tog"></div>
                     </div>
                   </div>
                 </div>
                 <div class="w-layout-grid qm_grid_item two">
-                  <div id="w-node-ae945790-f452-43c5-5fcf-41ceaa0de1c4-0e2d46e6" class="qm_item w-clearfix">
+                  <div class="qm_item w-clearfix">
                     <div class="qm_item_ico every"></div>
                     <div class="btn_ldr_wrp w-embed">
                       <lottie-player class="lottie_btn_ldr _15" qm_ldr_auto_renew="VR-US-LA2-1004" src="https://lottie.host/fb158a1f-7792-4544-bdfe-eaeb7cc509c9/MXhhkYpIxT.json">
                       </lottie-player>
                     </div>
-                    <div id="w-node-ae945790-f452-43c5-5fcf-41ceaa0de1c6-0e2d46e6" class="qm_item_txt">Renew Every</div>
+                    <div class="qm_item_txt">Renew Every</div>
                   </div>
-                  <div id="w-node-ae945790-f452-43c5-5fcf-41ceaa0de1c8-0e2d46e6" class="qm_item right">
+                  <div class="qm_item right">
                     <div class="qm_auto_renew_check_ico"></div>
                     <div class="w-embed"><input type="number" value="0" quick_menu_item="VR-US-LA2-1004" quick_menu_action="renew_interval" class="renew_interval_input" style="background: none; border: none; text-align: right; width: 38px; font-size: 14px; color: white; appearance: none;"></div>
                   </div>
                 </div>
                 <div quick_menu_item="VR-US-LA2-1004" quick_menu_action="swap" class="w-layout-grid qm_grid_item one">
-                  <div id="w-node-e256b988-dfb3-5443-e0df-213e0ab57a10-0e2d46e6" class="qm_item w-clearfix">
+                  <div class="qm_item w-clearfix">
                     <div class="qm_item_ico swap"></div>
-                    <div id="w-node-e256b988-dfb3-5443-e0df-213e0ab57a12-0e2d46e6" class="qm_item_txt">Swap Device</div>
+                    <div class="qm_item_txt">Swap Device</div>
                   </div>
                 </div>
                 <div quick_menu_item="VR-US-LA2-1004" quick_menu_action="remove" class="w-layout-grid qm_grid_item one">
-                  <div id="w-node-d30d13d4-6ae4-6030-a3db-defc9a6f6085-0e2d46e6" class="qm_item w-clearfix">
+                  <div class="qm_item w-clearfix">
                     <div class="qm_item_ico remove"></div>
-                    <div id="w-node-d30d13d4-6ae4-6030-a3db-defc9a6f6087-0e2d46e6" class="qm_item_txt">Remove</div>
+                    <div class="qm_item_txt">Remove</div>
                   </div>
                 </div>
                 <div quick_menu_item="VR-US-LA2-1004" quick_menu_action="revert" class="w-layout-grid qm_grid_item one">
-                  <div id="w-node-fd0bd7e3-eaba-e907-1363-bd14523b095b-0e2d46e6" class="qm_item w-clearfix">
+                  <div class="qm_item w-clearfix">
                     <div class="qm_item_ico revert"></div>
-                    <div id="w-node-fd0bd7e3-eaba-e907-1363-bd14523b095d-0e2d46e6" class="qm_item_txt">Revert Changes</div>
+                    <div class="qm_item_txt">Revert Changes</div>
                   </div>
                 </div>
               </div>
@@ -1521,7 +1521,7 @@ $item-height: 220px;
               </div>
             </div>
           </div>
-          <div data-w-id="b7a33e50-b0f5-ec8f-0369-a913a81595a9" class="bttm_nav_link--wrp billing">
+          <div class="bttm_nav_link--wrp billing">
             <a href="#" class="bttm_nav--link billing w-inline-block"><img src="images/top-bottom-arrows.svg" loading="lazy" width="9" alt="" class="top-bottom-arrows">
               <div class="bttm_nav_link--text">Billing</div>
             </a>
