--- a/public/funds.html
+++ b/public/funds.html
@@ -180,11 +180,11 @@
                     <div class="skel_checkout_funds">
                       <div class="skel_checkout_bg"></div>
                     </div>
-                    <div id="w-node-_041bd832-82c0-f27f-bf8b-975e05c70289-057d4fae" class="w-layout-layout qstack_c2 wf-layout-layout">
-                      <div id="w-node-_041bd832-82c0-f27f-bf8b-975e05c7028a-057d4fae" class="w-layout-cell lt_c">
+                    <div class="w-layout-layout qstack_c2 wf-layout-layout">
+                      <div class="w-layout-cell lt_c">
                         <div class="sect_crd_subtxt white">Upcoming</div>
                       </div>
-                      <div id="w-node-_041bd832-82c0-f27f-bf8b-975e05c7028d-057d4fae" class="w-layout-cell rt_c w-clearfix">
+                      <div class="w-layout-cell rt_c w-clearfix">
                         <a href="#" class="sect_crd_rt_cta w-inline-block">
                           <div class="sect_crd_rt_cta_txt hide"></div>
                         </a>
@@ -192,30 +192,30 @@
                     </div>
                     <div class="allo_crd_dvdr"></div>
                     <div class="checkout_det_wrp">
-                      <div id="w-node-_041bd832-82c0-f27f-bf8b-975e05c70292-057d4fae" class="w-layout-layout qstack_c2 wf-layout-layout">
-                        <div id="w-node-_041bd832-82c0-f27f-bf8b-975e05c70293-057d4fae" class="w-layout-cell lt_c">
+                      <div class="w-layout-layout qstack_c2 wf-layout-layout">
+                        <div class="w-layout-cell lt_c">
                           <div class="sect_crd_subtxt">Renewing Soon</div>
                         </div>
-                        <div id="w-node-_041bd832-82c0-f27f-bf8b-975e05c70296-057d4fae" class="w-layout-cell rt_c">
+                        <div class="w-layout-cell rt_c">
                           <div checkout_upcoming="renewing_soon" class="sect_crd_subtxt white">$0</div>
                         </div>
                       </div>
-                      <div id="w-node-_687d3196-f12b-2e61-acb9-4f7ca90f0b02-057d4fae" class="w-layout-layout qstack_c2 wf-layout-layout">
-                        <div id="w-node-_687d3196-f12b-2e61-acb9-4f7ca90f0b03-057d4fae" class="w-layout-cell lt_c">
+                      <div class="w-layout-layout qstack_c2 wf-layout-layout">
+                        <div class="w-layout-cell lt_c">
                           <div class="sect_crd_subtxt">Expiring Soon</div>
                         </div>
-                        <div id="w-node-_687d3196-f12b-2e61-acb9-4f7ca90f0b06-057d4fae" class="w-layout-cell rt_c">
+                        <div class="w-layout-cell rt_c">
                           <div checkout_upcoming="expiring_soon" class="sect_crd_subtxt white">$0</div>
                         </div>
                       </div>
-                      <div funds_line="required" id="w-node-_041bd832-82c0-f27f-bf8b-975e05c70299-057d4fae" class="w-layout-layout qstack_c2 wf-layout-layout">
-                        <div id="w-node-_041bd832-82c0-f27f-bf8b-975e05c7029a-057d4fae" class="w-layout-cell lt_c">
+                      <div funds_line="required" class="w-layout-layout qstack_c2 wf-layout-layout">
+                        <div class="w-layout-cell lt_c">
                           <div class="sect_crd_subtxt_wrp">
                             <div class="sect_crd_subtxt white">Total Upcoming</div>
                             <div class="checkout_tit_err_ico"></div>
                           </div>
                         </div>
-                        <div id="w-node-_041bd832-82c0-f27f-bf8b-975e05c7029f-057d4fae" class="w-layout-cell rt_c">
+                        <div class="w-layout-cell rt_c">
                           <div total_required="0" checkout_upcoming="total_required" class="sect_crd_subtxt orange">$0</div>
                         </div>
                       </div>
@@ -225,11 +225,11 @@
                     <div class="skel_checkout_funds">
                       <div class="skel_checkout_bg"></div>
                     </div>
-                    <div id="w-node-_7c98a441-3f9d-dd27-0305-cb958eb06537-057d4fae" class="w-layout-layout qstack_c2 wf-layout-layout">
-                      <div id="w-node-_7c98a441-3f9d-dd27-0305-cb958eb06538-057d4fae" class="w-layout-cell lt_c">
+                    <div class="w-layout-layout qstack_c2 wf-layout-layout">
+                      <div class="w-layout-cell lt_c">
                         <div class="sect_crd_subtxt white">Order</div>
                       </div>
-                      <div id="w-node-_7c98a441-3f9d-dd27-0305-cb958eb0653b-057d4fae" class="w-layout-cell rt_c w-clearfix">
+                      <div class="w-layout-cell rt_c w-clearfix">
                         <a href="#" class="sect_crd_rt_cta w-inline-block">
                           <div class="sect_crd_rt_cta_txt hide"></div>
                         </a>
@@ -237,22 +237,22 @@
                     </div>
                     <div class="allo_crd_dvdr"></div>
                     <div class="checkout_det_wrp">
-                      <div id="w-node-_7c98a441-3f9d-dd27-0305-cb958eb06540-057d4fae" class="w-layout-layout qstack_c2 wf-layout-layout">
-                        <div id="w-node-_7c98a441-3f9d-dd27-0305-cb958eb06541-057d4fae" class="w-layout-cell lt_c">
+                      <div class="w-layout-layout qstack_c2 wf-layout-layout">
+                        <div class="w-layout-cell lt_c">
                           <div class="sect_crd_subtxt purple">Amount Selected</div>
                         </div>
-                        <div id="w-node-_7c98a441-3f9d-dd27-0305-cb958eb06544-057d4fae" class="w-layout-cell rt_c">
+                        <div class="w-layout-cell rt_c">
                           <div due_total="5" due="total" class="sect_crd_subtxt purple">$5</div>
                         </div>
                       </div>
-                      <div funds_line="required" id="w-node-_7c98a441-3f9d-dd27-0305-cb958eb06547-057d4fae" class="w-layout-layout qstack_c2 wf-layout-layout">
-                        <div id="w-node-_7c98a441-3f9d-dd27-0305-cb958eb06548-057d4fae" class="w-layout-cell lt_c">
+                      <div funds_line="required" class="w-layout-layout qstack_c2 wf-layout-layout">
+                        <div class="w-layout-cell lt_c">
                           <div class="sect_crd_subtxt_wrp">
                             <div class="sect_crd_subtxt white">Funds Required</div>
                             <div class="checkout_tit_err_ico"></div>
                           </div>
                         </div>
-                        <div id="w-node-_7c98a441-3f9d-dd27-0305-cb958eb0654d-057d4fae" class="w-layout-cell rt_c">
+                        <div class="w-layout-cell rt_c">
                           <div checkout_funds="required" class="sect_crd_subtxt orange">$0</div>
                         </div>
                       </div>
@@ -262,11 +262,11 @@
                     <div class="skel_checkout_funds">
                       <div class="skel_checkout_bg"></div>
                     </div>
-                    <div id="w-node-_22afffb6-d081-90c8-47e8-d312a52abccc-057d4fae" class="w-layout-layout qstack_c2 wf-layout-layout">
-                      <div id="w-node-_22afffb6-d081-90c8-47e8-d312a52abccd-057d4fae" class="w-layout-cell lt_c">
+                    <div class="w-layout-layout qstack_c2 wf-layout-layout">
+                      <div class="w-layout-cell lt_c">
                         <div class="sect_crd_subtxt white">Wallet</div>
                       </div>
-                      <div id="w-node-_22afffb6-d081-90c8-47e8-d312a52abcd0-057d4fae" class="w-layout-cell rt_c w-clearfix">
+                      <div class="w-layout-cell rt_c w-clearfix">
                         <a href="#" class="sect_crd_rt_cta w-inline-block">
                           <div class="sect_crd_rt_cta_txt hide"></div>
                         </a>
@@ -274,30 +274,30 @@
                     </div>
                     <div class="allo_crd_dvdr"></div>
                     <div class="checkout_det_wrp">
-                      <div id="w-node-cea3a30c-df8e-12b0-820a-a86de56ff36b-057d4fae" class="w-layout-layout qstack_c2 wf-layout-layout">
-                        <div id="w-node-cea3a30c-df8e-12b0-820a-a86de56ff36c-057d4fae" class="w-layout-cell lt_c">
+                      <div class="w-layout-layout qstack_c2 wf-layout-layout">
+                        <div class="w-layout-cell lt_c">
                           <div class="sect_crd_subtxt">Current Funds</div>
                         </div>
-                        <div id="w-node-cea3a30c-df8e-12b0-820a-a86de56ff36f-057d4fae" class="w-layout-cell rt_c">
+                        <div class="w-layout-cell rt_c">
                           <div funds_total="0" checkout_funds="total" class="sect_crd_subtxt white">$0</div>
                         </div>
                       </div>
-                      <div id="w-node-ca2c6ecb-1278-9d26-8052-8f894df8858d-057d4fae" class="w-layout-layout qstack_c2 wf-layout-layout">
-                        <div id="w-node-ca2c6ecb-1278-9d26-8052-8f894df8858e-057d4fae" class="w-layout-cell lt_c">
+                      <div class="w-layout-layout qstack_c2 wf-layout-layout">
+                        <div class="w-layout-cell lt_c">
                           <div class="sect_crd_subtxt green">Funds After</div>
                         </div>
-                        <div id="w-node-ca2c6ecb-1278-9d26-8052-8f894df88591-057d4fae" class="w-layout-cell rt_c">
+                        <div class="w-layout-cell rt_c">
                           <div checkout_funds="after" class="sect_crd_subtxt green">$0</div>
                         </div>
                       </div>
-                      <div funds_line="required" id="w-node-cea3a30c-df8e-12b0-820a-a86de56ff372-057d4fae" class="w-layout-layout qstack_c2 wf-layout-layout">
-                        <div id="w-node-cea3a30c-df8e-12b0-820a-a86de56ff373-057d4fae" class="w-layout-cell lt_c">
+                      <div funds_line="required" class="w-layout-layout qstack_c2 wf-layout-layout">
+                        <div class="w-layout-cell lt_c">
                           <div class="sect_crd_subtxt_wrp">
                             <div class="sect_crd_subtxt white">Funds Required</div>
                             <div class="checkout_tit_err_ico"></div>
                           </div>
                         </div>
-                        <div id="w-node-cea3a30c-df8e-12b0-820a-a86de56ff376-057d4fae" class="w-layout-cell rt_c">
+                        <div class="w-layout-cell rt_c">
                           <div checkout_funds="required" class="sect_crd_subtxt orange">$0</div>
                         </div>
                       </div>
@@ -325,7 +325,7 @@
             <div class="pymnt_optn_wrp w-clearfix">
               <div back_btn="options" class="go_back_link w-clearfix">
                 <div id="modCancBtnIco" class="btn_icon back">
-                  <div id="modCancBtnLdr" class="lottie_btn_ldr" data-w-id="f7e2a44a-ca1e-8a91-85df-1d9d4d11e5c1" data-animation-type="lottie" data-src="documents/chipped-circle-loader-v3.json" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="1" data-duration="0.65"></div>
+                  <div id="modCancBtnLdr" class="lottie_btn_ldr" data-animation-type="lottie" data-src="documents/chipped-circle-loader-v3.json" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="1" data-duration="0.65"></div>
                 </div>
                 <div class="action_btn_text">Go Back</div>
               </div>
@@ -393,17 +393,16 @@
         </div>
       </div>
     </div>
-    <div id="errDivSmall" class="alert_wrp_small">
+    <div errDiv="small" class="alert_wrp_small">
       <div class="w-layout-grid alert_wrp_small_grid">
-        <div id="w-node-_74bafed5-d4d5-778d-fe2a-8043f9638c17-057d4fae" class="dialog_txt_item">
-          <div err_alert_ind="true" class="err_alert_ind_small orange"></div>
-          <div id="errTxtSmall" class="dialog_txt alt">Error</div>
-        </div>
-        <div id="w-node-e6598978-c406-07ff-ce45-e19ec3aba552-057d4fae" class="alert_small_grid_item right">
-          <div class="btn_ldr_wrp w-embed">
-            <lottie-player class="lottie_btn_ldr _17_2" err_item_ldr="realtime" src="https://lottie.host/79a0a014-ba6e-4031-b331-2f5259d09f50/YpYY2Fm3RC.json">
-            </lottie-player>
+        <div class="dialog_txt_item">
+          <div err_alert_ind="true" class="err_alert_ind_small orange">
+            <div class="btn_ldr_wrp w-embed">
+              <lottie-player class="lottie_btn_ldr realtime" err_item_ldr="realtime" src="../documents/realtime-loader-cropped.json" background="transparent" style="display: flex;">
+              </lottie-player>
+            </div>
           </div>
+          <div id="errTxtSmall" class="dialog_txt alt">Error</div>
         </div>
       </div>
     </div>
