--- a/public/settings/account.html
+++ b/public/settings/account.html
@@ -232,13 +232,13 @@ input[type=number] {
         </div>
       </div>
     </div>
-    <div id="errDivSmall" class="alert_wrp_small sb">
+    <div errDiv="small" class="alert_wrp_small sb">
       <div class="w-layout-grid alert_wrp_small_grid">
-        <div id="w-node-fac7a1c4-2b05-b6ea-dc6a-374dbd6bd7bb-a4f3b13e" class="dialog_txt_item">
+        <div class="dialog_txt_item">
           <div err_alert_ind="true" class="err_alert_ind_small orange"></div>
           <div id="errTxtSmall" class="dialog_txt alt">Error</div>
         </div>
-        <div id="w-node-fac7a1c4-2b05-b6ea-dc6a-374dbd6bd7bf-a4f3b13e" class="alert_small_grid_item right">
+        <div class="alert_small_grid_item right">
           <div class="btn_ldr_wrp w-embed">
             <lottie-player class="lottie_btn_ldr _17_2" err_item_ldr="realtime" src="https://lottie.host/79a0a014-ba6e-4031-b331-2f5259d09f50/YpYY2Fm3RC.json">
             </lottie-player>
