--- a/public/settings/developers.html
+++ b/public/settings/developers.html
@@ -250,14 +250,14 @@ input[type=number] {
                       <div class="info--wrap">
                         <div class="info_grid--wrap">
                           <div class="w-layout-grid info_grid--item-explain one noborder">
-                            <div checkout_info_explain="changes" id="w-node-ecb6f469-6d8e-9d4f-409c-ad515d319d02-e648c042" class="info_item--text explain">Your unique license key used to verify your lifetime discount. Post this on Illusory&#x27;s forum thread.</div>
+                            <div checkout_info_explain="changes" class="info_item--text explain">Your unique license key used to verify your lifetime discount. Post this on Illusory&#x27;s forum thread.</div>
                           </div>
                         </div>
                       </div>
                     </div>
                   </div>
                   <div class="input_embed--wrap w-embed"><input disabled="" api_key="master" type="text" class="ill_input apikey"></div>
-                  <div id="w-node-ecb6f469-6d8e-9d4f-409c-ad515d319d05-e648c042" class="input_btn--wrap two">
+                  <div class="input_btn--wrap two">
                     <div class="action_btn--inner w-clearfix">
                       <div action_btn_reveal="master" class="actions_btn reveal w-clearfix">
                         <div action_btn_ico_reveal="master" class="btn_icon reveal">
@@ -303,14 +303,14 @@ input[type=number] {
                       <div class="info--wrap">
                         <div class="info_grid--wrap">
                           <div class="w-layout-grid info_grid--item-explain one noborder">
-                            <div checkout_info_explain="changes" id="w-node-aff1e3a6-76fd-9905-ee9e-6a2969c364d3-e648c042" class="info_item--text explain">Your unique license key used to verify your lifetime discount. Post this on Illusory&#x27;s forum thread.</div>
+                            <div checkout_info_explain="changes" class="info_item--text explain">Your unique license key used to verify your lifetime discount. Post this on Illusory&#x27;s forum thread.</div>
                           </div>
                         </div>
                       </div>
                     </div>
                   </div>
                   <div class="input_embed--wrap w-embed"><input disabled="" api_key="change_ip" type="text" class="ill_input apikey"></div>
-                  <div id="w-node-aff1e3a6-76fd-9905-ee9e-6a2969c364d6-e648c042" class="input_btn--wrap two">
+                  <div class="input_btn--wrap two">
                     <div class="action_btn--inner w-clearfix">
                       <div action_btn_reveal="change_ip" class="actions_btn reveal w-clearfix">
                         <div action_btn_ico_reveal="change_ip" class="btn_icon reveal">
@@ -359,7 +359,7 @@ input[type=number] {
         <div id="errActionBtn1" class="dialog_sel_txt">Do action</div>
       </div>
     </div>
-    <div id="errDivSmall" class="alert_wrp_small sb">
+    <div errDiv="small" class="alert_wrp_small sb">
       <div class="w-layout-grid alert_wrp_small_grid">
         <div class="dialog_txt_item">
           <div err_alert_ind="true" class="err_alert_ind_small orange">
