--- a/public/settings/member.html
+++ b/public/settings/member.html
@@ -116,13 +116,13 @@
             <div class="input_grid--wrap">
               <div class="w-layout-grid input--grid two">
                 <div class="input--wrap w-clearfix">
-                  <div id="w-node-_3a1f2b74-a0d3-c9a6-16e8-280c6843e324-a6a14b45" class="input_label_ind--wrap">
+                  <div class="input_label_ind--wrap">
                     <div class="input_label_ind--inner w-clearfix">
                       <div indicator="action-required" class="input_label_ind--text">PARTNER</div>
                       <div class="info--wrap">
                         <div class="info_grid--wrap">
                           <div class="w-layout-grid info_grid--item-explain one noborder">
-                            <div checkout_info_explain="changes" id="w-node-_93cc4845-ca24-b201-2621-d841e18ee61b-a6a14b45" class="info_item--text explain">The forum or community you&#x27;re claiming a discount from.</div>
+                            <div checkout_info_explain="changes" class="info_item--text explain">The forum or community you&#x27;re claiming a discount from.</div>
                           </div>
                         </div>
                       </div>
@@ -131,13 +131,13 @@
                   <div class="input_embed--wrap partner w-embed"><input disabled="" member_input_active="partner" type="text" class="ill_input partner" value="blackhatworld.com"></div>
                 </div>
                 <div class="input--wrap w-clearfix">
-                  <div id="w-node-eab40cf3-1b11-f23b-dfc2-923ff157be0c-a6a14b45" class="input_label_ind--wrap">
+                  <div class="input_label_ind--wrap">
                     <div class="input_label_ind--inner w-clearfix">
                       <div indicator="action-required" class="input_label_ind--text">USERNAME</div>
                       <div class="info--wrap">
                         <div class="info_grid--wrap">
                           <div class="w-layout-grid info_grid--item-explain one noborder">
-                            <div checkout_info_explain="changes" id="w-node-eab40cf3-1b11-f23b-dfc2-923ff157be13-a6a14b45" class="info_item--text explain">Your username from the forum partner you&#x27;re claiming a discount for.</div>
+                            <div checkout_info_explain="changes" class="info_item--text explain">Your username from the forum partner you&#x27;re claiming a discount for.</div>
                           </div>
                         </div>
                       </div>
@@ -145,7 +145,7 @@
                   </div>
                   <div class="input_confirm--wrap">
                     <div class="input_check--wrap"></div>
-                    <div lottie_ldr="confirm_username" class="lottie_btn_ldr" data-w-id="0a825876-4f75-9117-0839-cf5fd07cacd9" data-animation-type="lottie" data-src="../documents/chipped-circle-loader-v3.json" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="1" data-duration="0.65"></div>
+                    <div lottie_ldr="confirm_username" class="lottie_btn_ldr" data-animation-type="lottie" data-src="../documents/chipped-circle-loader-v3.json" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="1" data-duration="0.65"></div>
                   </div>
                   <div class="input_embed--wrap username w-embed"><input disabled="" autocomplete="off" member_input_active="username" type="search" class="ill_input username"></div>
                 </div>
@@ -196,7 +196,7 @@
                 <div class="info--wrap sect-crd right">
                   <div class="info_grid--wrap">
                     <div class="w-layout-grid info_grid--item-explain one noborder">
-                      <div checkout_info_explain="irreversible" id="w-node-_476762da-73d0-f137-0bfc-25485de3227e-a6a14b45" class="info_item--text explain">When purchasing more than 1 proxy, Illusory automatically applies bulk discounting. Pricing may change at any time.</div>
+                      <div checkout_info_explain="irreversible" class="info_item--text explain">When purchasing more than 1 proxy, Illusory automatically applies bulk discounting. Pricing may change at any time.</div>
                     </div>
                   </div>
                 </div>
@@ -278,7 +278,7 @@
                   <div class="info--wrap sect-crd right">
                     <div class="info_grid--wrap">
                       <div class="w-layout-grid info_grid--item-explain one noborder">
-                        <div checkout_info_explain="irreversible" id="w-node-_26ab4ee3-466c-75fb-d53e-2960e76fa2ff-a6a14b45" class="info_item--text explain">When purchasing more than 1 proxy, Illusory automatically applies bulk discounting. Pricing may change at any time.</div>
+                        <div checkout_info_explain="irreversible" class="info_item--text explain">When purchasing more than 1 proxy, Illusory automatically applies bulk discounting. Pricing may change at any time.</div>
                       </div>
                     </div>
                   </div>
@@ -364,13 +364,13 @@
               <div class="input_grid--wrap">
                 <div class="w-layout-grid input--grid">
                   <div class="input--wrap w-clearfix">
-                    <div id="w-node-_571ce0f7-5b30-f454-6e83-ab9bba927867-a6a14b45" class="input_label_ind--wrap">
+                    <div class="input_label_ind--wrap">
                       <div class="input_label_ind--inner w-clearfix">
                         <div indicator="action-required" class="input_label_ind--text">USERNAME</div>
                         <div class="info--wrap">
                           <div class="info_grid--wrap">
                             <div class="w-layout-grid info_grid--item-explain one noborder">
-                              <div checkout_info_explain="changes" id="w-node-_571ce0f7-5b30-f454-6e83-ab9bba92786e-a6a14b45" class="info_item--text explain">Your username from the forum partner you&#x27;re claiming a discount for.</div>
+                              <div checkout_info_explain="changes" class="info_item--text explain">Your username from the forum partner you&#x27;re claiming a discount for.</div>
                             </div>
                           </div>
                         </div>
@@ -409,14 +409,14 @@
                         <div class="info--wrap">
                           <div class="info_grid--wrap">
                             <div class="w-layout-grid info_grid--item-explain one noborder">
-                              <div checkout_info_explain="changes" id="w-node-_571ce0f7-5b30-f454-6e83-ab9bba92788b-a6a14b45" class="info_item--text explain">Your unique license key used to verify your lifetime discount. Post this on Illusory&#x27;s forum thread.</div>
+                              <div checkout_info_explain="changes" class="info_item--text explain">Your unique license key used to verify your lifetime discount. Post this on Illusory&#x27;s forum thread.</div>
                             </div>
                           </div>
                         </div>
                       </div>
                     </div>
                     <div class="input_embed--wrap lic_key w-embed"><input disabled="" member_input="lic_key" type="text" class="ill_input lic_key" value="9999-AAAA-8888-7777"></div>
-                    <div id="w-node-_571ce0f7-5b30-f454-6e83-ab9bba92788e-a6a14b45" class="input_btn--wrap two">
+                    <div class="input_btn--wrap two">
                       <div class="action_btn--inner w-clearfix">
                         <div action_btn="copy" class="actions_btn copy w-clearfix">
                           <article action_btn_ico="copy" class="btn_icon copy1">
@@ -524,13 +524,13 @@
         </div>
       </div>
     </div>
-    <div id="errDivSmall" class="alert_wrp_small sb">
+    <div errDiv="small" class="alert_wrp_small sb">
       <div class="w-layout-grid alert_wrp_small_grid">
-        <div id="w-node-fac7a1c4-2b05-b6ea-dc6a-374dbd6bd7bb-a6a14b45" class="dialog_txt_item">
+        <div class="dialog_txt_item">
           <div err_alert_ind="true" class="err_alert_ind_small orange"></div>
           <div id="errTxtSmall" class="dialog_txt alt">Error</div>
         </div>
-        <div id="w-node-fac7a1c4-2b05-b6ea-dc6a-374dbd6bd7bf-a6a14b45" class="alert_small_grid_item right">
+        <div class="alert_small_grid_item right">
           <div class="btn_ldr_wrp w-embed">
             <lottie-player class="lottie_btn_ldr _17_2" err_item_ldr="realtime" src="https://lottie.host/79a0a014-ba6e-4031-b331-2f5259d09f50/YpYY2Fm3RC.json">
             </lottie-player>
