--- a/public/start.html
+++ b/public/start.html
@@ -131,7 +131,7 @@
         <div checkout_container="options" class="sect_crds_content--inner">
           <div class="gt_strt_crd_wrp">
             <div class="w-layout-grid gt_strt_crd_grid">
-              <div start_crd="preview" id="w-node-f2eefa79-b1ef-41df-e3bc-752f87596106-5e5cfac5" class="sect_crd_skel_wrp">
+              <div start_crd="preview" class="sect_crd_skel_wrp">
                 <div class="skel_crd--v2">
                   <div class="skel_crd_bg--v2"></div>
                 </div>
@@ -176,7 +176,7 @@
                   </div>
                 </a>
               </div>
-              <div start_crd="add_proxies" id="w-node-_40bd2211-5ebc-9684-6c33-ede94dbb6c49-5e5cfac5" class="sect_crd_skel_wrp">
+              <div start_crd="add_proxies" class="sect_crd_skel_wrp">
                 <div class="skel_crd--v2">
                   <div class="skel_crd_bg--v2"></div>
                 </div>
@@ -198,7 +198,7 @@
                   </div>
                 </a>
               </div>
-              <div start_crd="extend_proxies" id="w-node-_9025ca25-a92b-db44-fbf6-0b74b1b52590-5e5cfac5" class="sect_crd_skel_wrp hide">
+              <div start_crd="extend_proxies" class="sect_crd_skel_wrp hide">
                 <div class="skel_crd--v2">
                   <div class="skel_crd_bg--v2"></div>
                 </div>
@@ -220,7 +220,7 @@
                   </div>
                 </a>
               </div>
-              <div start_crd="member_discounts" id="w-node-_1d8808cc-3826-a5f1-10c9-1ec9ad2b32ad-5e5cfac5" class="sect_crd_skel_wrp">
+              <div start_crd="member_discounts" class="sect_crd_skel_wrp">
                 <div class="skel_crd--v2">
                   <div class="skel_crd_bg--v2"></div>
                 </div>
@@ -242,7 +242,7 @@
                   </div>
                 </a>
               </div>
-              <div start_crd="add_funds" id="w-node-_510f6788-4c7d-3d7b-5aca-c0471fbd8633-5e5cfac5" class="sect_crd_skel_wrp">
+              <div start_crd="add_funds" class="sect_crd_skel_wrp">
                 <div class="skel_crd--v2">
                   <div class="skel_crd_bg--v2"></div>
                 </div>
@@ -264,7 +264,7 @@
                   </div>
                 </a>
               </div>
-              <div start_crd="help_center" id="w-node-_8c642e61-51dd-464a-76ec-5e1cdf00394c-5e5cfac5" class="sect_crd_skel_wrp">
+              <div start_crd="help_center" class="sect_crd_skel_wrp">
                 <div class="skel_crd--v2">
                   <div class="skel_crd_bg--v2"></div>
                 </div>
@@ -309,7 +309,7 @@
                   </div>
                 </a>
               </div>
-              <div start_crd="support" id="w-node-_43c1e6bf-df4b-53bd-9c21-a6a7f36f37f9-5e5cfac5" class="sect_crd_skel_wrp">
+              <div start_crd="support" class="sect_crd_skel_wrp">
                 <div class="skel_crd--v2">
                   <div class="skel_crd_bg--v2"></div>
                 </div>
@@ -357,35 +357,19 @@
             </div>
           </div>
         </div>
-        <div id="errDivSmall" class="alert_wrp_small sb">
-          <div class="w-layout-grid alert_wrp_small_grid">
-            <div id="w-node-_498d367c-ca95-4e40-3997-359ddfdbbf7b-5e5cfac5" class="dialog_txt_item">
-              <div err_alert_ind="true" class="err_alert_ind_small orange"></div>
-              <div id="errTxtSmall" class="dialog_txt alt">Error</div>
-            </div>
-            <div id="w-node-_498d367c-ca95-4e40-3997-359ddfdbbf7f-5e5cfac5" class="alert_small_grid_item right">
-              <div class="btn_ldr_wrp w-embed">
-                <lottie-player class="lottie_btn_ldr _17_2" err_item_ldr="realtime" src="https://lottie.host/79a0a014-ba6e-4031-b331-2f5259d09f50/YpYY2Fm3RC.json">
-                </lottie-player>
-              </div>
+        <div errDiv="small" class="alert_wrp_small sb">
+      <div class="w-layout-grid alert_wrp_small_grid">
+        <div class="dialog_txt_item">
+          <div err_alert_ind="true" class="err_alert_ind_small orange">
+            <div class="btn_ldr_wrp w-embed">
+              <lottie-player class="lottie_btn_ldr realtime" err_item_ldr="realtime" src="../documents/realtime-loader-cropped.json" background="transparent" style="display: flex;">
+              </lottie-player>
             </div>
           </div>
+          <div id="errTxtSmall" class="dialog_txt alt">Error</div>
         </div>
-        <div class="sc"></div>
-        <div id="errDivSmall" class="alert_wrp_small">
-          <div class="w-layout-grid alert_wrp_small_grid">
-            <div id="w-node-_74bafed5-d4d5-778d-fe2a-8043f9638c17-5e5cfac5" class="dialog_txt_item">
-              <div err_alert_ind="true" class="err_alert_ind_small orange"></div>
-              <div id="errTxtSmall" class="dialog_txt alt">Error</div>
-            </div>
-            <div id="w-node-e6598978-c406-07ff-ce45-e19ec3aba552-5e5cfac5" class="alert_small_grid_item right">
-              <div class="btn_ldr_wrp w-embed">
-                <lottie-player class="lottie_btn_ldr _17_2" err_item_ldr="realtime" src="https://lottie.host/79a0a014-ba6e-4031-b331-2f5259d09f50/YpYY2Fm3RC.json">
-                </lottie-player>
-              </div>
-            </div>
-          </div>
-        </div>
+      </div>
+    </div>
         <div id="errDiv" class="alert_wrp err w-clearfix">
           <div class="dialog_tit w-clearfix">
             <div class="alert_icon_wrp err"></div>
